--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "dependencies": {
 	"express": "*",
-	"sqlite3": "*"
+	"pg": "*",
+	"passport": "*",
+	"passport-local": "*",
+	"bcrypt": "*"
     }
 }
